tests/ui/rfcs/rfc-2005-default-binding-mode/no-double-error.stderr
error[E0599]: no associated function or constant named `XXX` found for type `u32` in the current scope
  --> $DIR/no-double-error.rs:8:14
   |
LL |         u32::XXX => { }
   |              ^^^ associated function or constant not found in `u32`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
